--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="p-0" >
-        <button type="button" class="btn btn-lg section-2-btn-next"> <a style="text-decoration: none;" href="#section-3">NEXT</a></button>
+        <button type="button"  onclick="document.getElementById('section-3').scrollIntoView()"  class="btn btn-lg section-2-btn-next"> <a style="text-decoration: none;" href="#section-3">NEXT</a></button>
       </div>
         
     </div>
@@ -75,61 +75,63 @@
 
   <section class="section-3" id = "section-3">
     <h2>Element Selector</h2>
-    <div class="parameter-page2">
-    <div class="cutoff">
-    {{form.l_cutoff(class='left-cutoff',placeholder=form.l_cutoff.label.text)}}
-    {% if form.l_cutoff.errors %}
-          <div class="invalid-feedback">
-            {% for error in form.l_cutoff.errors %}
-                <span>{{ error }}</span>
-            {% endfor %}
-          </div>
-    {% endif %}
-    <img src="{{ url_for('static', filename='assets/errorlimits.svg') }}" alt="">
-    {{form.r_cutoff(class='right-cutoff', placeholder=form.r_cutoff.label.text )}}
-    {% if form.r_cutoff.errors %}
-          <div class="invalid-feedback">
-            {% for error in form.r_cutoff.errors %}
-                <span>{{ error }}</span>
-            {% endfor %}
-          </div>             
-    {% endif %}
-  </div>
-  <div class="n_peaks">
-    <img src="{{ url_for('static', filename='assets/npeaks.svg') }}" alt="icon for no. of peaks">
-    {{form.n_peaks(class='npeaks',placeholder = form.n_peaks.label.text)}} <br>
-    {% if form.n_peaks.errors %}
-          <div class="invalid-feedback">
-            {% for error in form.n_peaks.errors %}
-                <span>{{ error }}</span>
-            {% endfor %}
-          </div>          
-    {% endif %}
-  </div>
-  
-    <div class="pors">
-    <span>Search for Persistant</span> {{form.PS}}
-    {% if form.PS.errors %}
-          <div class="invalid-feedback">
-            {% for error in form.PS.errors %}
-                <span>{{ error }}</span>
-            {% endfor %}
-          </div>                  
-    {% endif %}
-  </div>
-  </div>
+
     <div class="periodic-table">
+      
     <div class="periodic-table-main">
+      <div class="parameter-page2">
+        <div class="cutoff">
+          {{form.l_cutoff(class='left-cutoff',placeholder=form.l_cutoff.label.text)}}
+          {% if form.l_cutoff.errors %}
+                <div class="invalid-feedback">
+                  {% for error in form.l_cutoff.errors %}
+                      <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+          {% endif %}
+          <img src="{{ url_for('static', filename='assets/errorlimits.svg') }}" alt="">
+          {{form.r_cutoff(class='right-cutoff', placeholder=form.r_cutoff.label.text )}}
+          {% if form.r_cutoff.errors %}
+                <div class="invalid-feedback">
+                  {% for error in form.r_cutoff.errors %}
+                      <span>{{ error }}</span>
+                  {% endfor %}
+                </div>             
+          {% endif %}
+        </div>
+      <div class="n_peaks">
+        <img src="{{ url_for('static', filename='assets/npeaks.svg') }}" alt="icon for no. of peaks">
+        {{form.n_peaks(class='npeaks',placeholder = form.n_peaks.label.text)}} <br>
+        {% if form.n_peaks.errors %}
+              <div class="invalid-feedback">
+                {% for error in form.n_peaks.errors %}
+                    <span>{{ error }}</span>
+                {% endfor %}
+              </div>          
+        {% endif %}
+      </div>
+      
+      <div class="pors">
+        <span>Search for Persistant</span> {{form.PS}}
+        {% if form.PS.errors %}
+              <div class="invalid-feedback">
+                {% for error in form.PS.errors %}
+                    <span>{{ error }}</span>
+                {% endfor %}
+              </div>                  
+        {% endif %}
+      </div>
+      </div>
       <!-- Generate the select options using Flask-WTF -->
       {% for field in form.selected_elements %}
         {% if (loop.index in range(1,58)) or (loop.index in range(72,90)) or (loop.index in range(104,119) )%}
-          <div class="element main {{ 'selected' if field.data }} " data-symbol="{{ field.label.text }} " data-id="{{ loop.index }}">{{ field }}</div>
+          <div class="element main {{ 'selected' if field.data }} " data-symbol="{{ field.label.text }}" data-id="{{ loop.index }}">{{ field(class='select-entries') }}</div>
         {% endif %}
         {% endfor %}
         <div class="passive-periodic">
         {% for field in form.selected_elements %}
         {% if (loop.index in range(58,72)) or (loop.index in range(90,104))%}
-          <div class="element {{ 'selected' if field.data }} {{ 'act' if loop.index in range(90,104) else 'lanth' }}" data-symbol="{{ field.label.text }} " data-id="{{ loop.index }}">{{ field }}</div>
+          <div class="element {{ 'selected' if field.data }} {{ 'act' if loop.index in range(90,104) else 'lanth' }}" data-symbol="{{ field.label.text }} " data-id="{{ loop.index }}">{{ field(class='select-entries') }}</div>
         {% endif %}
       {% endfor %}
     </div>
@@ -152,13 +154,20 @@
 
 
 {% block JScript%}
+<script>
+  const element = Array.from(document.getElementsByClassName('select-entries'));
+  element.forEach(
+    entries =>{console.log(entries.value);
+    entries.innerHTML = entries.value;
+    }
+  );
+  </script>
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <script src="https://cdn.plot.ly/plotly-2.25.2.min.js" charset="utf-8"></script>
 <script>
   function clickHandler() {
     document.getElementById('file').click();
   }
-  let element = document.getElementById('file_input')
 </script>
 <script src="{{url_for('static', filename='plot.js')}}"></script>
 <script>
@@ -166,9 +175,9 @@
   elements.forEach(element => {
     element.addEventListener('click', () => {
       element.classList.toggle('selected');
-      console.log(document.getElementById("form-elements").options);
-      var optionsToSelect = element.innerHTML;
+      var optionsToSelect = element.getAttribute("data-symbol");
       var select = document.getElementById( 'form-elements' );
+      console.log(element.getAttribute("data-id"));
       for ( var i = 0, l = select.options.length; i < l; i++ ){
         o = select.options[i];
         if ( optionsToSelect.indexOf( o.text ) != -1 ){
@@ -182,7 +191,6 @@
       }
     });
   });
-
 </script>
 
 {% endblock JScript%}
