--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,17 @@
 {% extends "layout.html" %}
 {% block content%}
     <h1>About PAGE</h1>
+	<p>The openLIBS website provides a convenient environment for the Laser Induced Breakdown Spectroscopy (LIBS) data analysis to obtain qualitative information about the sample. The website uses the latest version of the <a href="https://github.com/Bluejee/OpenLIBS">OpenLIBS package</a> as a back end enabling direct and quick access for LIBS analysis.</p>
+
+	<p>The team that made this work possible :<br>
+Balakrishna Prabhu B. N., N. Gokul, Amarnath, Vipin Satheesh, and Noora Nasreen</p>
+	<hr>
+
+	<h2>Acknowledgments</h2>
+	<P>The website development was initiated under the guidance of <a href="https://www.anoopkk.com/">Dr. Anoop K. K.</a> and carried out in collaboration with <a href="https://physics.cusat.ac.in/infrastructure/research-labs/5/">Applied Optics Division</a>, Department of Physics, Cochin University of Science and Technology, India. </p>
+
+	<p>We thank Mrs. Lekha Mary John and Mr. Rajeev Rajendran for their timely insights and support. We express our sincere gratitude to Ms. Leya Pauly, Ms. V. S. Sreeranjini Pai and Ms. Avani S. R. for their contributions.</p>
+
+	<p>The standard spectroscopic data were taken from National Institute of Standards and Technology (NIST) <a href="https://www.nist.gov/pml/atomic-spectra-database>Atomic Spectra Database</a>.</p>
+                                                                                                                 
 {% endblock content%}
