Adding information to docs.html

--- a/templates/docs.html
+++ b/templates/docs.html
@@ -1,37 +1,39 @@
 {% extends "layout.html" %}
 {% block content%}
-<h1>Documentation</h1>
-<section>
-    <p class="container">
-        Laser-Induced Breakdown Spectroscopy (LIBS) is a rapid, portable, in situ atomic spectroscopy technique used to
-        measure the concentration of major and trace elements in solid, liquid, or air samples, or to record the
-        chemical
-        signature (fingerprint) of a material. Each LIBS spectrum contains not only information about the concentrations
-        of
-        all naturally-occurring elements, but also some isotopic ratios and information about the atomic structure of
-        the
-        material. Read more...
-    </p>
-</section>
-<section>
-    <h2>
-        Parameters and use cases
-    </h2>
-    <p>The parameters used for analysis are explained in detail in the following sub-sections</p>
-    <h3>
-        Input Spectral Data
-    </h3>
-    <p>‘LIBS analyser’ accepts the spectral data from the user in csv format. The first column should be the wavelength
-        of the spectral lines. The second column should be the intensity. Header should not be included. An image of a
-        sample spectral data is provided for reference.</p>
-</section>
-<section>
-    <h2>Contributing</h2>
-    <p>LIBS ANALYSER is a community project maintained for and by its users. There are many ways you can help!</p>
-    <ul>
-        <li>Help other users on discourse</li>
-        <li>Report a bug or request a feature on Github or</li>
-        <li>Improve the documentation and code.</li>
-    </ul>
-</section>
+	<h1>DOCUMENTATION</h1>
+	<hr>
+	<p>Laser Induced Breakdown Spectroscopy(LIBS) is a versatile tool for quantitatively and qualitatively analyzing a sample using laser ablation. It is a rapid and portable technique that requires no sample preparation. In LIBS the optical emissions from the plasma plume produced by the pulsed laser ablation of the sample surface are recorded and compared to a database of atomic emission spectra of known materials.</p>
+	<hr>
+
+	<h2>Input Parameters</h2>
+		<p><u>Spectral Data Input</u> : ‘openLIBS’ accepts the spectral data from the user in CSV format which contains a 2D array with the first column representing the wavelength (nm) and the second column representing the corresponding intensities of atomic emissions from the sample. Header should not be included. An image of a sample spectral data is provided for reference.
+		<br>
+		<u>Left Wavelength Limit</u> : The minimum value of the wavelength range across which the data needs to be analyzed.
+		<br>
+		<u>Right Wavelength Limit</u> : The maximum value of the wavelength range across which the data needs to be analyzed.
+		<br>
+		<u>Required Minimum Intensity</u> : The minimum intensity required for a peak to be considered for analysis.
+		<br>
+		<u>Allowed Left Error</u> : The minimum difference in wavelength (nm) allowed for a peak to be considered a match. Input the magnitude without sign.
+		<br>
+		<u>Allowed Right Error</u> : The maximum difference in wavelength (nm) allowed for a peak to be considered a match.
+		<br>
+		<u>Match Threshold</u> : The minimum number of peaks that must match the standard peaks for an element to be considered a match.</p>
+		<hr>
+
+	<h2>Results and Interpretation</h2>
+	<ul>
+		<li>List of the detected elements.</li>
+		<li>A plot showing the detected peaks for each element.</li>
+		<li>An array corresponding to each detected element that includes the observed peak value in the spectrum, the intensity or strength of the peak at the given wavelength, the standard wavelength value for the peak, and the ionization state of the element corresponding to the peak.</li>
+	</ul>
+	<hr>
+
+	<h2>Contributing</h2>
+	openLIBS is a community project maintained for and by its users. There are many ways you can help!
+	<ul>
+		<li>Help other users on discourse</li>
+		<li>Report a bug or request a feature on GitHub or</li>
+		<li>Improve the documentation and code.</li>
+	</ul>
 {% endblock content%}
