--- a/static/main.css
+++ b/static/main.css
@@ -4,15 +4,19 @@
 }
 
 
-.btn-color {
-    background-color: rgb(152, 33, 118);
+abbr[title] {
+    cursor: inherit;
+    text-decoration: none;
 }
 
 body {
     font-family: 'Roboto';
+    overflow-x: hidden;
+    
 }
 
 nav {
+
     background-color: rgb(31, 40, 60);
     color: white;
     background-image: url('media/libsheader.png');
@@ -36,20 +40,25 @@ nav {
 }
 
 .nav-link {
-    color: wheat;
+    color: rgb(245, 222, 179);
     align-items: center;
 
     &:hover {
-        color: brown;
+        color: rgba(245, 222, 179,.8);
+        text-decoration: underline;
+        text-underline-offset: 6px;
+    }
+
+    &:active {
+        color: rgba(245, 222, 179,.5);
         text-decoration: underline;
         text-underline-offset: 6px;
     }
 }
 
 .mynav-items {
-    align-self: flex-end;
-    justify-self: right;
-    margin-left: 40rem;
+    justify-content: right;
+
 }
 
 .favic {
@@ -57,23 +66,86 @@ nav {
     height: 48px;
 }
 
+/* main {
+    background: url('/static/media/bgtrans.png'), linear-gradient(45deg, rgba(6, 77, 143, 1) 0%, rgba(6, 47, 99, 1) 72%, rgba(5, 9, 44, 1) 100%);
+    background-size: 100%  98dvh;
+    background-repeat: repeat;
+    background-blend-mode: hard-light;
+} */
+
+section {
+    /* margin-top: 10%; */
+    /* height: 91.5dvh;*/
+    display: block;
+    width: 100%;
+    height: 99.9dvh;
+    background:linear-gradient(45deg, rgba(6, 77, 143, 1) 0%, rgba(6, 47, 99, 1) 72%, rgba(5, 9, 44, 1) 100%), url('/static/assets/bg_transparent.png');
+    background-size: 100% 100%;
+    background-blend-mode: hard-light;
+    background-position: center;
+}
+
+
+#section1 {
+    /* height: 100dvh;
+    width: 98dvw; */
+    height: 100dvh;
+    
+}
+
+.startcite {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10rem;
+
+    .start {
+        background-color: #982176;
+        color:rgb(255, 255, 255);
+        &:hover {
+            background-color: rgba(152, 33, 118, .8);
+        }
+    }
+
+    .cite {
+        color: white;
+        border-color: aqua;
+
+        &:hover {
+            background-color: aqua;
+        }
+    }
+}
 
 .section-2 {
     position: relative;
 }
 
 .section-2-btn {
-    width: 12rem;
+    width: 18rem;
     height: 2rem;
     /* margin: 2vh 5vw 0vh 10vw; */
     border-radius: 2.8125rem;
-    background: #D9D9D9;
-    margin-top: .2rem;
-    margin-left: 13rem;
+    margin-top: -2rem;
+    margin-left: 8rem;
     font-size: 1rem;
     text-align: center;
     padding: .1rem;
+    background-color: #982176;
+    color:rgb(255, 255, 255);
+    display: inline;
+
+    &:hover {
+        background-color: rgba(152, 33, 118, .8);
+        color:rgb(255, 255, 255,.8);
+    }
+
+    &::after {
+        content : arr(data-filename);
+    }
 }
+
 
 .anchor {
     display: block;
@@ -84,49 +156,67 @@ nav {
     visibility: hidden;
 }
 
-.next {
-    align-self: center;
+.input_and_filename{
+    display:flex;
+    flex-flow: row nowrap;
+    width: auto;
+    height: auto;
+
+    #filetext {
+        color:#fff;
+        margin-left: 0.5rem;
+        margin-top: -1.5rem;
+        display: inline-block;
+        width: 34%;
+        height: 3rem;
+        align-self: center;
+    }
 }
 
 .section-2-btn-next {
     color: #000000;
-    margin-top: 0rem;
-    margin-left: 50rem;
+    margin-top: .5rem;
+    margin-left: calc(50% - 17%  );
     border-radius: 5rem;
-    background: #D9D9D9;
-    display: flex;
-    width: 12rem;
+    background: rgb(3, 201, 136);
+    width: 34%;
     height: 3rem;
-    justify-content: center;
+    display: block;
 
-    & a {
-        all:none;
+    &:hover {
+        background-color: rgba(3, 201, 136, .8);
+    }
+
+    &:active {
+        background-color: rgba(3, 201, 136, .5);
     }
 }
+
 
 .graphc{
     margin-left: 8%;
     margin-right: 8%;
     margin-top: 0%;
 
-    border-radius: 5rem;
+    /* border-radius: 5rem; */
     /* width: 75rem; */
     height: 30rem;
     outline: cyan;
     border: 2px solid #00A4BD;
-    background-color: black;
+    background-color: rgb(17, 20, 43);
     display: grid;
     grid-template-columns: 80% 20%;
 }
 
 #graphContainer {
-    margin-left: 5%;
-    margin-right: 10%;
-    margin-top: 2.5rem;
+    margin-left: 0%;
+    margin-right: 1%;
+    margin-bottom: 0rem;
+    margin-top: 0rem;
     /* border-radius: 5rem; */
     /* width: 75rem; */
-    height: 25rem;
-    border: 4px solid #2196F3;
+    /* height: 25rem; */
+    border-right: 4px solid rgb(204, 204, 204);
 
 }
 
@@ -145,6 +235,12 @@ nav {
     height: 0px;
     max-height: 0px;
 }
+.section-3{
+    & h2 {
+        color: white;
+        text-align: center;
+    }
+}
 
 /* styles.css */
 .periodic-table-main {
@@ -156,6 +252,7 @@ nav {
     grid-template-columns: repeat(18, 1fr); /* Adjust columns as needed */
     gap: 1px; /* Adjust gap between elements */
     column-gap: 5px;
+    row-gap: 0;
     width: calc(18*var(--elem_size_width ));
     justify-self: center;
     align-self: center;
@@ -167,11 +264,11 @@ nav {
     position: relative;
     width: var(--elem_size_width); /* Adjust element size */
     height: var(--elem_size_height);
-    background-color: #ccc;
-    border: 1px solid #888;
+    background-color: rgb(174, 227, 253);
+    border: 1px solid rgb(174, 227, 253);
     text-align: center;
-    line-height: 50px;
-    font-size: 12px;
+    line-height: 51px;
+    font-size: 1.2rem;
     cursor: pointer;
     word-break: break-word;
     text-overflow: ellipsis;
@@ -179,61 +276,30 @@ nav {
     overflow-wrap: break-word;
     word-wrap: break-word;
     word-break: break-word;
+
+    &:hover {
+        background-color: rgba(174, 227, 253,.8);
+    }
+    
+    &:active {
+        background-color: rgba(174, 227, 253, .5);
+    }
+      
   }
-  
+
+
   .element.selected {
-    background-color: #3498db; /* Selected color */
+    background-color: transparent; /* Selected color */
     color: #fff;
     /* Add any additional styling for the selected state */
+    &:hover {
+        background-color: rgba(174, 227, 253,.8);
+    }
+    
+    &:active {
+        background-color: rgba(174, 227, 253, .5);
+    }
   }
-  
-
-section {
-    height: 100vh;
-    width: 100vw;
-    background: rgb(5, 9, 44);
-    background: url('/static/media/bgtrans.png'), linear-gradient(45deg, rgba(6, 77, 143, 1) 0%, rgba(6, 47, 99, 1) 72%, rgba(5, 9, 44, 1) 100%);
-    background-size: cover;
-    background-blend-mode: multiply;
-}
-.section-3{
-    & h2 {
-        color: white;
-    }
-}
-
-#secion1 {
-    height: 92vh;
-    width: 98.9vw;
-    background: rgb(5, 9, 44);
-    background: url('/static/media/bgtrans.png'), linear-gradient(45deg, rgba(6, 77, 143, 1) 0%, rgba(6, 47, 99, 1) 72%, rgba(5, 9, 44, 1) 100%);
-    background-size: cover;
-    background-blend-mode: multiply;
-}
-
-.startcite {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 10rem;
-
-    .start {
-        &:hover {
-            background-color: green;
-            border-radius: 10%;
-        }
-    }
-
-    .cite {
-        color: white;
-        border-color: aqua;
-
-        &:hover {
-            background-color: aqua;
-        }
-    }
-}
 
 
 .periodic-table {
@@ -260,17 +326,6 @@ section {
     grid-template-columns: repeat(14, 1fr);
 }
 
-.element {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    user-select: none;
-    
-    &:checked {
-        color: red;
-    }
-}
-
 
 .parameters-page1{
     display: grid;
@@ -280,56 +335,53 @@ section {
     & input {
         width: 10rem;
         justify-self: right;
-        margin-top: 5rem;
-        margin-bottom: 2rem;
         align-self: center;
+        background-color: rgb(145, 200, 228);
+        border-radius:15rem -15rem -15rem 15rem
         
     }
 
 
     & img {
+        background-color: transparent;
         width: 3rem;
         height: 3.2rem;
-        border: 1px solid #fff;
-        border-radius : 2rem;
-        justify-self: center;
-        align-self: center;
-        background-color: lightblue;
-        
+        border-radius: 2rem;
+        justify-self: left;
+        align-self: center;        
     }
 }
 
 .parameter-page2{
     color:white;
-    position: relative;
-    grid-column: 3 /  span 9;
-    grid-row: 1 / span 1;
+    grid-column: 4 /  span 9;
+    grid-row: 1 / span 3;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: min-content auto;
     /* margin-left: 20%; */
     /* margin-right: 20%; */
 
     & img{
-        width: 3rem;
-        height: 3.2rem;
-        background-color: white;
+        width: 2.5rem;
+        height: 2.5rem;
+        background-color: transparent;
         justify-content: center;
         margin :0px;
-        gap:0px;
         padding: 0%;
         /* margin-top: -.35rem; */
         border-bottom: 1px solid black;
         border-top: 1px solid black;
+        border: 1px solid black;
     }
 
     & input {
-        height:3.25rem;
+        height:2rem;
         width:7rem;
         border-radius: 15rem;
         justify-content:center ;
         padding:0%;
         margin:0%;
-
+       
         &::placeholder {
             text-align: center;
         }
@@ -341,6 +393,9 @@ section {
         grid-template-columns: .4fr .2fr .4fr;
         column-gap: 0px;
         padding: 0px;
+        align-items: center;
+        /* width: 10%; */
+       
     }
 
     .left-cutoff {
@@ -348,16 +403,18 @@ section {
         justify-content:right;
         grid-column: 1;
         
-        border-right: 5px solid white;
+        
         border-left: 5px solid black;
         border-bottom: 5px solid black;
         border-top: 5px solid black;
         margin-left: .7rem;
         display: inline;
+        text-align: left;
+        padding-left: 20px;
     }
 
     .right-cutoff {
-        border-left: 5px solid white;
+        
         border-right: 5px solid black;
         border-bottom: 5px solid black;
         border-top: 5px solid black;
@@ -368,12 +425,14 @@ section {
         padding:0px;
         grid-column: 3;
         margin-left: 0rem;
+        text-align: right;
+        padding-right: 20px;
         
     }
 
 
     .pors {
-        grid-column: 3;
+        grid-column: 2;
         justify-content: center;
 
         display: grid;
@@ -382,9 +441,9 @@ section {
         & input[type='checkbox'] {
             width: 2rem;
             grid-area: b;
-
-
+            align-self: center;
         }
+        
 
         & span {
             grid-area: a;
@@ -396,58 +455,91 @@ section {
     }
     .n_peaks{
         grid-column: 2;
-        
 
-       
+        align-self: center;
+        justify-self: center;
 
         & img {
+            width: 2.5rem;
+            height: 2.5rem;
+            background-color: transparent;
             margin: 0rem;
             margin-left: 2px;
-            width: 3rem;
-            height: 3.2rem;
             border-radius:15rem 0rem 0rem 15rem;
             border-bottom: 1px solid black;
             border-top: 3px solid black;
             
         }
+        
                 
 
     }
 
     #n_peaks {        
-        border-left: 5px solid white;
         
         border-right: 5px solid black;
         border-bottom: 5px solid black;
         border-top: 5px solid black;
         border-radius:0rem 15rem 15rem 0rem;
-
         justify-content:left;
         margin-left: 0;
         padding:0px;
         grid-column: 3;
         margin-left: -.25rem;
+        align-content: left;
+        text-align: right;
+        padding-right: 10px;
     }
     /* & img {
         position:absolute;
         top: 2px;
     } */
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 .submit-btn{
-    left: 80%;
-    top: 80%;
-    margin-left: 85%;
-    margin-top: 4.5%;
-    background-color: rgba(0, 51, 102, 1);
-    color: rgba(0, 102, 255, 1);
-    border-radius: 10%;
+    color: #000000;
+    margin-top:3%;
+    margin-left: 35%;
+    border-radius: 5rem;
+    background: rgb(3, 201, 136);
+    width: 34%;
+    height: 3rem;
+    display: block;
+
     &:hover {
-        color:green;
-        background-color: aquamarine;
-        border:0px;
-        
+        background-color: rgba(3, 201, 136, .8);
     }
-    &:focus {
-        outline: 2px;
+
+    &:active {
+        background-color: rgba(3, 201, 136, .5);
     }
+}
+
+.plot-container .plotly {
+    width: 100%;
+    height: 100%;
+}
+
+/* Results */
+
+.result-plot {
+    justify-content: center;
+    align-content: center;
+}
+
+/* About*/
+
+section{
+    color: white;
 }
