--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,10 +30,11 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
   <header class="">
-    <nav class="navbar navbar-expand-lg navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
-        <img class='favic' src="{{url_for('static', filename='/media/libslogo.svg')}}" alt="icon">
-        <a class="navbar-brand" href="{{ url_for('home') }}">openLIBS</a><h2>{{session['uid']}}</h2>
+        <a href="{{ url_for('home') }}">
+        <img class='favic' src="{{url_for('static', filename='/media/libslogo.svg')}}" alt="icon"> </a>
+        <a class="navbar-brand" href="{{ url_for('home') }}">openLIBS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -42,7 +43,7 @@
           <ul class="navbar-nav">
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('home') }}">HOME</a></li>
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('docs') }}">DOCS</a></li>
-            <li class="nav-item pe-5"><a class="nav-link" href="https://github.com/Bluejee/OpenLIBS">GITHUB</a></li>
+            <li class="nav-item pe-5"><a class="nav-link" href="https://github.com/Bluejee/LIBS_Analysis_Website">GITHUB</a></li>
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('about') }}">ABOUT</a></li>
           </ul>
         </div>
